--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v3.3">
   </script>
   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v3.3&appId=1857394734363087&autoLogAppEvents=1"></script>
+  <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDNDCEjRGp3ZeUH6ncYh2EFrRn1Y1jNOyw&callback=initMap"
+  type="text/javascript"></script> -->
 </body>
 
 </html>
